<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:background="#ffffffff"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <include
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  layout="@layout/top_title"/>
  <LinearLayout 
			android:id="@+id/commnet_linearlayout_content"
			android:background="@drawable/top_column_bg" 
			android:layout_width="fill_parent"
			android:layout_height="37.0dip">
			<RelativeLayout 
			android:layout_width="fill_parent"
				android:layout_height="fill_parent">
				<ImageView 
				android:paddingLeft="15dip"
				android:layout_centerVertical="true"
					android:id="@+id/comment_column_slide_bar" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:src="@drawable/comment_column_highlight" />
				<LinearLayout 
				android:layout_centerVertical="true"
					android:orientation="horizontal" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TextView android:textAppearance="@style/column_item_style"
						android:gravity="center" android:id="@+id/comment_top_comments"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:text="@string/top_comments" android:layout_weight="1.0" />
					<TextView android:textAppearance="@style/column_item_style"
						android:gravity="center" android:id="@+id/comment_everyday_comments_rank"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:text="@string/everyday_comments_rank"
						android:layout_weight="1.0" />
					<TextView android:textAppearance="@style/column_item_style"
						android:gravity="center" android:id="@+id/comment_everyweek_comments_rank"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:text="@string/everyweek_comments_rank"
						android:layout_weight="1.0" />
				</LinearLayout>
			</RelativeLayout>
		</LinearLayout>
		<ListView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/comment_list"
		android:drawSelectorOnTop="false"
		android:cacheColorHint="#00000000"
		android:divider="@drawable/list_divider_line"/>
</LinearLayout>
