<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical"
	android:layout_width="wrap_content" android:layout_height="55.0dip"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:gravity="center"
		android:orientation="horizontal" android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/comment_left" />
		<LinearLayout android:gravity="center"
			android:orientation="horizontal" android:background="@drawable/comment_toolbar_bk"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<LinearLayout android:gravity="center" android:id="@+id/toolbar_share_text"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minWidth="50.0dip">
				<TextView android:textAppearance="@style/comment_toolbar_style"
					android:gravity="center" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/share_comment"
					android:layout_weight="1.0" />
			</LinearLayout>
			<LinearLayout android:gravity="center" android:id="@+id/toolbar_reply_text"
				android:visibility="gone" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:minWidth="50.0dip">
				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:src="@drawable/comment_split" />
				<TextView android:textAppearance="@style/comment_toolbar_style"
					android:gravity="center" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/reply_comment"
					android:layout_weight="1.0" />
			</LinearLayout>
			<LinearLayout android:gravity="center" android:id="@+id/toolbar_copy_text"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minWidth="50.0dip">
				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:src="@drawable/comment_split" />
				<TextView android:textAppearance="@style/comment_toolbar_style"
					android:gravity="center" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/copy_comment"
					android:layout_weight="1.0" />
			</LinearLayout>
			<LinearLayout android:gravity="center" android:id="@+id/toolbar_orig_text"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:minWidth="50.0dip">
				<ImageView android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:src="@drawable/comment_split" />
				<TextView android:textAppearance="@style/comment_toolbar_style"
					android:gravity="center" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/original_button"
					android:layout_weight="1.0" />
			</LinearLayout>
		</LinearLayout>
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/comment_right" />
	</LinearLayout>
	<ImageView android:id="@+id/indicator_arraw"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_marginTop="-7.0dip" android:src="@drawable/comment_bottom"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" />
</LinearLayout>
